--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
   font-size: 2rem;
 }
 
-.ingredients__title, .instructiona__title, 
+.ingredients__title, .instructions__title, 
 .nutrition__title {
   font-weight: 800;
   font-size: 1.5rem;
